--- a/app/src/main/res/layout/bottom_sheet.xml
+++ b/app/src/main/res/layout/bottom_sheet.xml
@@ -19,7 +19,7 @@
                 android:scrollbars="none">
 
             <androidx.constraintlayout.widget.ConstraintLayout
-                    android:id="@+id/cv_detail"
+                    android:id="@+id/constrainLayotRoot"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginLeft="@dimen/_10sdp"
@@ -43,7 +43,7 @@
 
 
                 <ImageView
-                        android:id="@+id/imgProfile"
+                        android:id="@+id/imageViewProfile"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:src="@mipmap/ic_launcher"
@@ -53,22 +53,23 @@
 
 
                 <TextView
-                        android:id="@+id/tvTitle"
+                        android:id="@+id/textViewTitle"
                         android:layout_width="0dp"
                         android:textColor="@android:color/white"
                         android:textStyle="bold"
                         android:layout_height="wrap_content"
                         android:maxLines="1"
-                        android:text="Extreme Alert"
+                        android:text="@string/extreme_alert"
                         android:textSize="@dimen/_16sdp"
                         app:layout_constraintLeft_toLeftOf="parent"
-                        app:layout_constraintTop_toTopOf="@+id/imgProfile"
-                        app:layout_constraintStart_toEndOf="@+id/imgProfile"
+                        app:layout_constraintTop_toTopOf="@+id/imageViewProfile"
+                        app:layout_constraintStart_toEndOf="@+id/imageViewProfile"
                         android:layout_marginStart="12dp"
-                        android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/tvTime"/>
+                        android:layout_marginEnd="8dp"
+                        app:layout_constraintEnd_toStartOf="@+id/textViewTime"/>
 
                 <TextView
-                        android:id="@+id/tvSubTitle"
+                        android:id="@+id/textViewSubTitle"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:maxLines="1"
@@ -76,30 +77,30 @@
                         android:textSize="@dimen/_12sdp"
                         android:textColor="@android:color/white"
                         app:layout_constraintLeft_toLeftOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
-                        app:layout_constraintStart_toStartOf="@+id/tvTitle"
-                        app:layout_constraintEnd_toEndOf="@+id/tvTitle" android:layout_marginTop="8dp"/>
+                        app:layout_constraintTop_toBottomOf="@+id/textViewTitle"
+                        app:layout_constraintStart_toStartOf="@+id/textViewTitle"
+                        app:layout_constraintEnd_toEndOf="@+id/textViewTitle" android:layout_marginTop="8dp"/>
 
 
                 <TextView
-                        android:id="@+id/tvTime"
+                        android:id="@+id/textViewTime"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="7 mins ago"
                         android:textColor="@color/colorGray"
                         app:layout_constraintRight_toRightOf="parent"
-                        app:layout_constraintTop_toTopOf="@+id/tvTitle" android:layout_marginRight="16dp"/>
+                        app:layout_constraintTop_toTopOf="@+id/textViewTitle" android:layout_marginRight="16dp"/>
 
 
                 <TextView
-                        android:id="@+id/tvDesc"
+                        android:id="@+id/textViewDesc"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:text="Here is a sample title for an active marker"
                         android:textSize="@dimen/_18sdp"
                         android:textColor="@android:color/white"
                         android:textStyle="bold"
-                        app:layout_constraintTop_toBottomOf="@+id/imgProfile"
+                        app:layout_constraintTop_toBottomOf="@+id/imageViewProfile"
                         app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                         app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                         android:layout_marginTop="16dp"/>
@@ -107,16 +108,16 @@
 
                 <androidx.viewpager.widget.ViewPager
                         android:id="@+id/viewPagerImages"
-                        android:layout_width="match_parent"
-                        android:layout_height="@dimen/_170sdp"
+                        android:layout_width="0dp"
+                        android:layout_height="200dp"
                         app:layout_constraintLeft_toLeftOf="parent"
                         app:layout_constraintRight_toRightOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/tvDesc" android:layout_marginTop="8dp"/>
+                        app:layout_constraintTop_toBottomOf="@+id/textViewDesc" android:layout_marginTop="8dp"/>
 
                 <me.relex.circleindicator.CircleIndicator
                         android:id="@+id/indicatorImages"
                         android:layout_width="match_parent"
-                        android:layout_height="@dimen/_40sdp"
+                        android:layout_height="wrap_content"
                         app:ci_drawable_unselected="@drawable/circle"
                         app:ci_margin="@dimen/_6sdp"
                         app:layout_constraintLeft_toLeftOf="parent"
@@ -135,9 +136,11 @@
                           android:lineSpacingExtra="3sp"
                           android:textColor="@android:color/white"
                           android:layout_height="wrap_content"
-                          android:layout_marginTop="8dp"
+                          android:layout_marginTop="16dp"
                           app:layout_constraintStart_toStartOf="parent"
-                          android:layout_marginStart="24dp" app:layout_constraintTop_toBottomOf="@+id/indicatorImages"/>
+                          android:layout_marginStart="24dp" app:layout_constraintTop_toBottomOf="@+id/indicatorImages"
+                          app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"
+                          app:layout_constraintVertical_bias="0.0"/>
 
 
                 <TextView android:layout_width="wrap_content"
@@ -151,9 +154,9 @@
                           android:lineSpacingExtra="3sp"
                           android:textColor="@android:color/white"
                           android:layout_height="wrap_content"
-                          android:layout_marginTop="8dp"
-                          app:layout_constraintTop_toBottomOf="@+id/indicatorImages"
-                          app:layout_constraintStart_toEndOf="@+id/textViewFile" android:layout_marginStart="12dp"/>
+                          app:layout_constraintStart_toEndOf="@+id/textViewFile" android:layout_marginStart="12dp"
+                          app:layout_constraintTop_toTopOf="@+id/textViewFile"
+                          app:layout_constraintBottom_toBottomOf="@+id/textViewFile"/>
 
             </androidx.constraintlayout.widget.ConstraintLayout>
         </ScrollView>
